<resources>
    <string name="app_name">Layoutfacebook</string>
    <string name="hint_email_phone">Email or Phone</string>
    <string name="hint_pass">Password</string>
    <string name="text_login">Log in</string>
    <string name="text_sign_up"><u>Sign Up for Facebook</u></string>
    <string name="text_forget_Password"><u>Forgot Password?</u></string>
    <string name="text_bottom_button">\?</string>
</resources>
