<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imv_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"
        android:layout_marginTop="@dimen/edt_magin_top"
        android:src="@drawable/image_facebook" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imv_fb"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"

        android:layout_marginTop="@dimen/edt_magin_top"
        android:background="@drawable/bo_tron"
        android:hint="@string/hint_email_phone"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black" />


    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"
        android:layout_marginTop="@dimen/edt_magin_top"
        android:background="@drawable/bo_tron"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_pass"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"
        android:layout_marginTop="@dimen/edt_magin_top"
        android:background="@drawable/bo_tron2"
        android:padding="@dimen/text_padding"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"
        android:layout_marginTop="@dimen/edt_magin_top"
        android:gravity="center"
        android:padding="@dimen/text_padding"
        android:text="@string/text_forget_Password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:gravity="center"
        android:text="@string/text_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />
    <Button
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:text="@string/text_bottom_button"
        android:textColor="@color/white"
        android:background="@drawable/bo_tron2"
        android:textSize="@dimen/text_size_small"
        android:layout_width="@dimen/width_button_bottom"
        android:layout_height="@dimen/height_button_bottom"
        android:layout_marginLeft="@dimen/marginleft_button_bottom"
        android:layout_alignParentBottom="true" />

</RelativeLayout>









